--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,6 @@ main {
     margin: 0 auto;
 }
 
-.container form label {
-    text-align: left;
-    padding: 4px 8px;
-    margin-top: 20px;
-}
 
 .container form input {
     padding: 4px 8px;
@@ -95,12 +90,65 @@ main .list ul {
     width: 400px;
     margin: 0 auto;
     text-align: left;
+}
+
+main .list ul li {
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 10px;
+    font-size: 18px;
+    border-bottom: 1px solid white;
     background-color: burlywood;
     color: white;
 }
 
-main .list ul li {
-    padding: 4px 10px;
+main .list ul li button {
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
     font-size: 18px;
-    border-bottom: 1px solid white;
+}
+
+main .list ul p {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.container form.addTask .inputWrap {
+    border-bottom: 2px solid burlywood;
+    margin-bottom: 40px;
+}
+
+.container form.addTask {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 400px;
+    margin: 0 auto;
+}
+
+.container form.addTask>* {
+    width: 400px;
+    margin: 0 auto;
+}
+
+.container form.addTask input {
+    padding: 4px 8px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    width: 350px;
+}
+
+.container form.addTask button {
+    width: 30px;
+    background-color: white;
+    border: none;
+    border-radius: 15px;
+    color: #666;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
